finished most of the project

--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,4 +1,12 @@
+<style>
+body {
+  background-color: #dddddd;
+}
+</style>
+
+
 <div id="<%= dom_id movie %>">
+  <h1>Editing Movie:</h1>
   <p>
     <strong>Title:</strong>
     <%= movie.title %>
