--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,8 +3,10 @@
 <%= render @movie %>
 
 <div>
+  <strong>
   <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
   <%= link_to "Back to movies", movies_path %>
 
   <%= button_to "Destroy this movie", @movie, method: :delete %>
+  </strong>
 </div>
